# CalenderWebBackEnd

OneDrive/calenderWeb/calenderwebbackend/: db.sqlite3  pyproject.toml
OneDrive/calenderWeb/calenderwebbackend/config/: schema.py  settings.py  urls.py
OneDrive/calenderWeb/calenderwebbackend/datememo/: admin.py  apps.py  models.py  mutations.py  quries.py  schema.py  types.py
OneDrive/calenderWeb/calenderwebbackend/datememo/migrations/: 0001_initial.py  0002_alter_datememo_description.py  0003_alter_datememo_date.py  0004_alter_datememo_user.py
OneDrive/calenderWeb/calenderwebbackend/schedulemoduls/: admin.py  apps.py  models.py  mutations.py  quries.py  schema.py  types.py
OneDrive/calenderWeb/calenderwebbackend/schedulemoduls/migrations/: 0001_initial.py  0002_rename_schedulemodul_schedulemodule.py  0003_rename_schedulemodule_schedulemodul.py
OneDrive/calenderWeb/calenderwebbackend/schedules/: admin.py  models.py  mutations.py  quries.py  schema.py  types.py
OneDrive/calenderWeb/calenderwebbackend/schedules/migrations/: 0001_initial.py  0002_schedule_is_checked_alter_schedule_date_and_more.py  0003_alter_schedule_is_checked.py
OneDrive/calenderWeb/calenderwebbackend/totalmemo/: admin.py  apps.py  models.py  mutations.py  quries.py  schema.py  types.py
OneDrive/calenderWeb/calenderwebbackend/totalmemo/migrations/: 0001_initial.py  0002_alter_totalmemo_description.py
OneDrive/calenderWeb/calenderwebbackend/users/: admin.py  models.py  quries.py  schema.py  types.py  urls.py  views.py
youtubefrontend/: file  package-lock.json  package.json  (+1 more)
(+102 files in other folders)
